--- a/templates/welcome.jinja
+++ b/templates/welcome.jinja
@@ -2,12 +2,12 @@
 {# content for main block #}
 {% block content %}
 
-<div class="top spacer"></div>
+<div class="big top spacer"></div>
 <div class="ui relaxed horizontal grid">
 
   <div class="eight wide column">
     <div class="ui huge center aligned icon header">
-      <i class="circular emphasized inverted users icon"></i>
+      <i class="circular blue emphasized inverted users icon"></i>
       <div class="content">
         <a href="/startsession/" class="ui massive animated fade button">
           <div class="visible content">
@@ -27,14 +27,14 @@
 
   <div class="eight wide column">
     <div class="ui huge center aligned icon header">
-      <i class="circular emphasized inverted user icon"></i>
+      <i class="circular blue emphasized inverted user icon"></i>
       <div class="content">
         <a href="/activesessions/" class="ui massive animated fade button">
           <div class="visible content">
-            Order Dat Pizza
+            &nbsp; Join Session &nbsp;
           </div>
           <div class="hidden content">
-            Go for it!
+            Order Dat Pizza!
           </div>
         </a>
       </div> {# end content #}
