Small touch - makes buttons equally sized
modified:   templates/helpers/pizza_helpers.jinja

--- a/templates/helpers/pizza_helpers.jinja
+++ b/templates/helpers/pizza_helpers.jinja
@@ -21,7 +21,7 @@
       <div class="ui right floated buttons">
         <div class="ui green medium submit button"> Small </div>
         <div class="or"></div>
-        <div class="ui medium primary submit button"> &nbsp; Big &nbsp;</div>
+        <div class="ui medium primary submit button"> &nbsp; Big &nbsp;&nbsp;</div>
       </div>
     </div>
 
