--- a/templates/welcome.jinja
+++ b/templates/welcome.jinja
@@ -9,7 +9,7 @@
     <div class="ui huge center aligned icon header">
       <i class="circular blue emphasized inverted users icon"></i>
       <div class="content">
-        <a href="/startsession/" class="ui massive animated fade button">
+        <a href={{ url_for("start_session") }} class="ui massive animated fade button">
           <div class="visible content">
             Start Pizza Session
           </div>
@@ -29,7 +29,7 @@
     <div class="ui huge center aligned icon header">
       <i class="circular blue emphasized inverted user icon"></i>
       <div class="content">
-        <a href="/activesessions/" class="ui massive animated fade button">
+        <a href={{ url_for("active_sessions") }} class="ui massive animated fade button">
           <div class="visible content">
             &nbsp; Join Session &nbsp;
           </div>
