Fix macro import name
modified:   templates/application.jinja

--- a/templates/application.jinja
+++ b/templates/application.jinja
@@ -1,4 +1,4 @@
-{% import "helpers/pizza_helpers.jinja" as pz_helper%}
+{% import "helpers/pizza_helper.jinja" as pz_helper%}
 
 <!doctype html>
 <html>
