Default pizza place is first one. Fix selection
modified:   templates/start_session.jinja

--- a/templates/start_session.jinja
+++ b/templates/start_session.jinja
@@ -55,7 +55,7 @@
       <div class="field">
         <label>Pizza Place</label>
         <div class="ui selection dropdown">
-          <input type="hidden" name="pizza_place">
+          <input type="hidden" name="pizza_place" value="{{ pizza_places }}">
           <i class="disabled food icon"></i>
           <div class="text">{{ pizza_places[0]|capitalize }}</div>
           <i class="dropdown icon"></i>
