--- a/templates/thank_you.jinja
+++ b/templates/thank_you.jinja
@@ -18,13 +18,7 @@
     </h2>
     <div class="ui piled segment">
       <h2>Your Order</h2>
-      <p>{{ size|capitalize }} {{ pizza_info[0]|capitalize }}</p>
-      <p><em>({{ pizza_info[5] }})</em></p>
-      {% if size == "small" %}
-      <p><strong>Price:</strong> {{ pizza_info[2] }} + 0.33 = <strong>{{ pizza_info[2]+0.33 }} &euro;</strong></p>
-      {% else %}
-      <p><strong>Price:</strong> {{ pizza_info[4] }} + 0.33 = <strong>{{ pizza_info[4]+0.33 }} &euro;</strong></p>
-      {% endif %}
+      <p>{{ order["pizza"]|capitalize }} for {{order["price"]}}€</p>
     </div>
   </div>
 </div>
