--- a/templates/start_session.jinja
+++ b/templates/start_session.jinja
@@ -12,73 +12,20 @@
 {# content for main block #}
 {% block content %}
 
-<div class="medium top spacer"></div>
-<div class="ui page grid">
-  <div class="column">
-    <div id="session_form" class="ui form segment">
-
-      <div class="field">
-        <label>Email</label>
-        <div class="ui left labeled icon input">
-          <input type="text" name="email" placeholder="example@eset.sk">
-            <i class="user icon"></i>
-            <div class="ui corner label">
-              <i class="icon asterisk"></i>
-            </div>
-          </input>
-        </div>
-      </div> {# field end #}
-      <div class="field">
-        <label>Open until</label>
-        <div class="ui left labeled icon input">
-          <input type="text" name="deadline" placeholder="10:30">
-            <i class="time icon"></i>
-            <div class="ui corner label">
-              <i class="icon asterisk"></i>
-            </div>
-          </input>
-        </div>
-      </div> {# field end #}
-
-      <div class="field">
-        <label>Approx Lunch Time</label>
-        <div class="ui left labeled icon input">
-          <input type="text" name="lunch_time" placeholder="11:00">
-            <i class="time icon"></i>
-            <div class="ui corner label">
-              <i class="icon asterisk"></i>
-            </div>
-          </input>
-        </div>
-      </div> {# field end #}
-
-      <div class="field">
-        <label>Pizza Place</label>
-        <div class="ui selection dropdown">
-          <input type="hidden" name="pizza_place" value="{{ pizza_places[0] }}">
-          <i class="disabled food icon"></i>
-          <div class="text">{{ pizza_places[0]|capitalize }}</div>
-          <i class="dropdown icon"></i>
-          <div class="menu">
-            {% for pizza_place in pizza_places %}
-            <div class="item {% if loop.first %}active{% endif %}" data-value="{{pizza_place}}">{{ pizza_place|capitalize }}</div>
-            {% endfor %}
-          </div>
-        </div>
-      </div> {# field end #}
-
-      <div class="field">
-        <label>Invite someone?</label>
-        <div class="ui left labeled icon input">
-          <input type="text" name="recipients" placeholder="Comma separated list of recipients">
-            <i class="mail icon"></i>
-          </input>
-        </div>
-      </div> {# field end #}
-
-      <div class="ui blue submit button">create</div>
-    </div> {# end form #}
-  </div> {# end column #}
-</div>
+    <form action="" method="POST" name="create_session">
+        {{ form.hidden_tag() }}
+        <p>
+            Select from pizza places: {{ form.pizza_place }}
+        </p>
+        <p>
+            Select deadline: {{ form.deadline }}
+        </p>
+        <p>
+            Invites: {{ form.recipients }}
+        </p>
+        <p>
+            <input type="submit" value="Create Pizza Session" />
+        </p>
+    </form>
   
 {% endblock content %}
