Adds option to session dashboard view to delete pizza order, closes #5

--- a/templates/session_dashboard.jinja
+++ b/templates/session_dashboard.jinja
@@ -11,25 +11,36 @@
 {# content for main block #}
 {% block content %}
 
-<table>
-    <thead>
-        <tr>
-            <th>user</th>
-            <th>pizza</th>
-            <th>extra</th>
-            <th>price</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for order in orders %}
-        <tr>
-            <th> {{ order["email"] }} </th>
-            <th> {{ order["pizza_name"] }} </th>
-            <th> {{ order["extra"] }} </th>
-            <th> {{ order["pizza_price"] }} € </th>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+{% if orders %}
+    <table>
+        <thead>
+            <tr>
+                <th>user</th>
+                <th>pizza</th>
+                <th>extra</th>
+                <th>price</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for order in orders %}
+            <tr>
+                <td> {{ order["email"] }} </td>
+                <td> {{ order["pizza_name"] }} </td>
+                <td> {{ order["extra"] }} </td>
+                <td> {{ order["pizza_price"] }} € </td>
+                <td>
+                    <form action="deleteorder" method="POST" name="delete_order">
+                        <input type="hidden" name="order_id" value="{{order["id"]}}" />
+                        <input type="submit" name="submit" value="delete" />
+                    </form>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+{% else %}
+    <p>No orders yet...</p>
+{% endif %}
 
 {% endblock content %}
