--- a/templates/select_action.jinja
+++ b/templates/select_action.jinja
@@ -2,10 +2,10 @@
 {# content for main block #}
 {% block content %}
 
-<div class="big top spacer"></div>
 <div class="ui relaxed horizontal grid">
 
   <div class="eight wide column">
+    <div class="big padding-spacer"></div>
     <div class="ui huge center aligned icon header">
       <i class="circular blue emphasized inverted users icon"></i>
       <div class="content">
@@ -26,6 +26,7 @@
   </div>
 
   <div class="eight wide column">
+    <div class="big padding-spacer"></div>
     <div class="ui huge center aligned icon header">
       <i class="circular blue emphasized inverted user icon"></i>
       <div class="content">
